--- a/newfile.html
+++ b/newfile.html
@@ -139,5 +139,18 @@
 
       </div>
     </div>
+  <div class="container-fluid mt-3">	
+    <div class="container-fluid ">
+      <div class="row">
+        <div class="col-sm-3 col-xl-5 bg-primary text-white">
+          Dr. Ing. h.c. F. Porsche AG, usually shortened to Porsche, is a German automobile manufacturer specializing in luxury, high-performance
+        </div>
+        <div class="col-sm-9 col-xl-8 bg-dark text-white">
+          Dr. Ing. h.c. F. Porsche AG, usually shortened to Porsche, is a German automobile manufacturer specializing in luxury, high-performanceDr. Ing. h.c. F. Porsche AG, usually shortened to Porsche, is a German automobile manufacturer specializing in luxury, high-performance
+        </div>
+      </div>
+    </div>
+  </div>
+    
 </body>
 </html>
